# Latince-Text-Based

./: .env.example  .gitignore  README.md  design-qa.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
client/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.tsx  main.tsx
data/: items.json  npcs.json  side-quest-templates.json  skills.json
data/assessment/: achievements.json  question-bank.json
data/campaigns/: via-prima.json
data/imported/: frequency-dictionary.raw.json  (+1 more)
docs/: authoring-studio.md  beta-qa-checklist.md  cinematic-narrative-layer.md  content-guide.md  dialogue-first-rpg-mechanics.md  freeform-latin-roleplay-core.md  frequency-dictionary-import.md  immersive-rpg-interaction-loop.md  lexical-engine.md  visual-scene-graph-editor.md
e2e/: authoring-flow.spec.ts  desktop-smoke.spec.ts  llm-settings.spec.ts  player-flow.spec.ts
scripts/: append-vicus-scenes.ts  build-lexical-index.ts  check-living-scene-coverage.ts  check-saves.ts  check-village-life-coverage.ts  desktop-doctor.mjs  generate-beta-report.ts  generate-stage4-content.mjs  generate-vicus-prologue.mjs  import-frequency-dictionary.ts  inject-living-scene-data.ts  inspect-lexicon.ts  qa-check.ts  smoke-test.ts  suggest-dialogue-migration.ts  suggest-interaction-migration.ts  suggest-living-scene-rewrite.ts  validate-content.ts
shared/: gameTypes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+577 files in other folders)
