[package]
name = "via-prima"
version = "0.1.0"
description = "Via Prima desktop shell"
authors = ["kadirbeyan"]
edition = "2021"

[lib]
name = "via_prima_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
